[gd_scene load_steps=5 format=4 uid="uid://gryjy3yk6m55"]

[ext_resource type="Script" path="res://scripts/screen.gd" id="1_abq2j"]
[ext_resource type="Script" path="res://scripts/camera_trigger.gd" id="2_bfgul"]
[ext_resource type="TileSet" uid="uid://crvk12t5oiqrk" path="res://assets/tile_set.tres" id="3_gh8o0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdtaq"]
size = Vector2(480, 256)

[node name="Screen" type="Node2D"]
script = ExtResource("1_abq2j")

[node name="Camera" type="Node2D" parent="."]

[node name="CameraOrigin" type="Node2D" parent="Camera"]
position = Vector2(256, 144)

[node name="CameraTrigger" type="Area2D" parent="Camera"]
collision_layer = 128
collision_mask = 128
script = ExtResource("2_bfgul")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera/CameraTrigger"]
position = Vector2(256, 144)
shape = SubResource("RectangleShape2D_kdtaq")

[node name="Tilemaps" type="Node2D" parent="."]

[node name="Overworld" type="TileMapLayer" parent="Tilemaps"]
z_index = -1
tile_map_data = PackedByteArray("AAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAACAAEAAAADAAMAAAACAAEAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAAAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAACAAAAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAACAAEAAAACAAYAAAACAAEAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAQAAAACAAEAAAADAAUAAAABAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAQAAAACAAEAAAAEAAUAAAACAAAAAAAEAAYAAAACAAEAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAACAAEAAAAFAAMAAAABAAAAAAAFAAUAAAAFAAEAAAAFAAYAAAACAAEAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAACAAEAAAAGAAUAAAACAAEAAAAGAAYAAAACAAEAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAACAAEAAAAHAAUAAAAHAAAAAAAHAAYAAAALAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAABAAAAAAAIAAMAAAAFAAEAAAAIAAYAAAACAAEAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAACAAAAAAAJAAMAAAAKAAIAAAAJAAYAAAACAAEAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAACAAAAAAAKAAMAAAACAAEAAAAKAAYAAAAKAAEAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAACAAAAAAALAAMAAAAKAAIAAAALAAQAAAAHAAAAAAALAAUAAAAHAAAAAAALAAYAAAAHAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAACAAEAAAACAAcAAAACAAEAAAACAAgAAAACAAEAAAADAAcAAAABAAEAAAADAAgAAAABAAEAAAAEAAcAAAACAAEAAAAEAAgAAAACAAEAAAAFAAcAAAACAAEAAAAFAAgAAAACAAEAAAAGAAcAAAACAAEAAAAGAAgAAAACAAEAAAAHAAcAAAACAAEAAAAHAAgAAAACAAEAAAAIAAcAAAACAAEAAAAIAAgAAAACAAEAAAAJAAcAAAACAAEAAAAJAAgAAAACAAEAAAAKAAcAAAAKAAUAAAAKAAgAAAACAAEAAAALAAcAAAAAAAEAAAALAAgAAAACAAEAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAACAAAAAAAMAAMAAAACAAEAAAAMAAQAAAACAAEAAAAMAAUAAAACAAEAAAAMAAYAAAACAAEAAAAMAAcAAAAKAAQAAAAMAAgAAAACAAEAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAACAAAAAAANAAMAAAAKAAIAAAANAAQAAAACAAEAAAANAAUAAAACAAEAAAANAAYAAAACAAEAAAANAAcAAAALAAAAAAANAAgAAAACAAEAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAACAAAAAAAOAAMAAAAHAAEAAAAOAAQAAAAHAAAAAAAOAAUAAAAHAAAAAAAOAAYAAAAHAAAAAAAOAAcAAAAHAAIAAAAOAAgAAAACAAEAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAADAAAAAAAPAAMAAAADAAEAAAAPAAQAAAALAAMAAAAPAAUAAAALAAMAAAAPAAYAAAALAAMAAAAPAAcAAAAFAAIAAAAPAAgAAAADAAEAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAIAAQAAAAGAAAAAAAIAAUAAAACAAEAAAAJAAQAAAAHAAIAAAAJAAUAAAACAAEAAAAKAAQAAAACAAEAAAAKAAUAAAACAAEAAAADAAYAAAABAAEAAAAGAAMAAAACAAAAAAAGAAQAAAACAAEAAAAHAAQAAAAGAAEAAAAHAAMAAAACAAAAAAAFAAQAAAABAAEAAAA=")
tile_set = ExtResource("3_gh8o0")

[node name="MirrorWorld" type="TileMapLayer" parent="Tilemaps"]
z_index = -2
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAMAAAAAAAEAAAAAAAMAAAABAAEAAAAAAAMAAAACAAEAAAAAAAMAAAACAAIAAAAAAAMAAAADAAIAAAAAAAMAAAAEAAIAAAAAAAMAAAAEAAMAAAACAAQAAAADAAMAAAACAAQAAAAAAAIAAAAAAAMAAAAAAAMAAAAAAAMAAAAAAAQAAAAAAAMAAAAAAAUAAAAAAAMAAAAAAAYAAAAAAAMAAAABAAAAAAAAAAMAAAABAAIAAAAAAAMAAAABAAMAAAAAAAMAAAABAAQAAAAAAAMAAAABAAUAAAAAAAMAAAABAAYAAAAAAAMAAAACAAAAAAAAAAMAAAACAAMAAAAAAAMAAAACAAQAAAAAAAMAAAACAAUAAAACAAQAAAACAAYAAAACAAQAAAADAAAAAAAAAAMAAAADAAEAAAAAAAMAAAADAAQAAAACAAQAAAADAAUAAAABAAMAAAADAAYAAAABAAQAAAAEAAAAAAAAAAMAAAAEAAEAAAAAAAMAAAAEAAQAAAACAAQAAAAEAAUAAAACAAMAAAAEAAYAAAACAAQAAAAFAAAAAAAAAAMAAAAFAAEAAAAAAAMAAAAFAAIAAAACAAQAAAAFAAMAAAABAAMAAAAFAAUAAAAFAAQAAAAFAAYAAAACAAQAAAAGAAAAAAAAAAMAAAAGAAEAAAAAAAMAAAAGAAIAAAACAAQAAAAGAAMAAAACAAMAAAAGAAQAAAACAAQAAAAGAAUAAAACAAQAAAAGAAYAAAACAAQAAAAHAAAAAAAAAAMAAAAHAAEAAAAAAAMAAAAHAAIAAAACAAQAAAAHAAMAAAACAAMAAAAHAAQAAAACAAQAAAAHAAUAAAACAAQAAAAHAAYAAAAAAAQAAAAIAAAAAAAAAAMAAAAIAAEAAAAAAAMAAAAIAAIAAAABAAMAAAAIAAMAAAAFAAQAAAAIAAQAAAACAAQAAAAIAAUAAAACAAQAAAAIAAYAAAACAAQAAAAJAAAAAAAAAAMAAAAJAAEAAAAAAAMAAAAJAAIAAAACAAMAAAAJAAMAAAALAAEAAAAJAAQAAAACAAQAAAAJAAUAAAACAAQAAAAJAAYAAAACAAQAAAAKAAAAAAAAAAMAAAAKAAEAAAAAAAMAAAAKAAIAAAACAAMAAAAKAAMAAAACAAQAAAAKAAQAAAACAAQAAAAKAAUAAAACAAQAAAAKAAYAAAACAAQAAAALAAAAAAAAAAMAAAALAAEAAAAAAAMAAAALAAIAAAACAAMAAAALAAMAAAALAAEAAAALAAQAAAAHAAMAAAALAAUAAAAHAAMAAAALAAYAAAAHAAMAAAAAAAcAAAAAAAMAAAAAAAgAAAAAAAMAAAABAAcAAAAAAAMAAAABAAgAAAACAAQAAAACAAcAAAACAAQAAAACAAgAAAACAAQAAAADAAcAAAABAAQAAAADAAgAAAABAAQAAAAEAAcAAAACAAQAAAAEAAgAAAACAAQAAAAFAAcAAAACAAQAAAAFAAgAAAACAAQAAAAGAAcAAAACAAQAAAAGAAgAAAACAAQAAAAHAAcAAAACAAQAAAAHAAgAAAACAAQAAAAIAAcAAAACAAQAAAAIAAgAAAACAAQAAAAJAAcAAAACAAQAAAAJAAgAAAACAAQAAAAKAAcAAAACAAQAAAAKAAgAAAACAAQAAAALAAcAAAALAAAAAAALAAgAAAACAAQAAAAMAAAAAAAAAAMAAAAMAAEAAAAAAAMAAAAMAAIAAAACAAMAAAAMAAMAAAACAAQAAAAMAAQAAAACAAQAAAAMAAUAAAACAAQAAAAMAAYAAAACAAQAAAAMAAcAAAALAAQAAAAMAAgAAAACAAQAAAANAAAAAAAAAAMAAAANAAEAAAAAAAMAAAANAAIAAAACAAMAAAANAAMAAAALAAEAAAANAAQAAAACAAQAAAANAAUAAAACAAQAAAANAAYAAAACAAQAAAANAAcAAAAAAAQAAAANAAgAAAACAAQAAAAOAAAAAAAAAAMAAAAOAAEAAAAAAAMAAAAOAAIAAAACAAMAAAAOAAMAAAACAAQAAAAOAAQAAAACAAQAAAAOAAUAAAACAAQAAAAOAAYAAAACAAQAAAAOAAcAAAACAAQAAAAOAAgAAAACAAQAAAAPAAAAAAAAAAMAAAAPAAEAAAAAAAMAAAAPAAIAAAADAAMAAAAPAAMAAAADAAQAAAAPAAQAAAADAAQAAAAPAAUAAAADAAQAAAAPAAYAAAADAAQAAAAPAAcAAAADAAQAAAAPAAgAAAADAAQAAAAFAAQAAAABAAQAAAA=")
tile_set = ExtResource("3_gh8o0")

[connection signal="area_entered" from="Camera/CameraTrigger" to="Camera/CameraTrigger" method="_on_area_entered"]
[connection signal="body_entered" from="Camera/CameraTrigger" to="Camera/CameraTrigger" method="_on_body_entered"]
[connection signal="body_exited" from="Camera/CameraTrigger" to="Camera/CameraTrigger" method="_on_body_exited"]
